--- a/DLC_preprocessing.ipynb
+++ b/DLC_preprocessing.ipynb
@@ -61,6 +61,8 @@
     "# Standard libraries\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import matplotlib\n",
+    "matplotlib.use('TkAgg') # open plots in sepate windows\n",
     "\n",
     "# Custom modules with helper functions\n",
     "from data_handling_mod import *            # Functions for file handling and hole definition\n",
@@ -77,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ec0ed4aa-b38d-4d1c-96c5-21c10913f951",
    "metadata": {},
    "outputs": [],
@@ -85,9 +87,9 @@
     "# 2) Select files (video and DLC tracking data)\n",
     "\n",
     "# Choose where to save output results (e.g., figures, corrected files)\n",
-    "path = '/path1/path2/path3/'  # <-- Replace with your desired folder path\n",
+    "path = '/home/rafael/Downloads/Dados Parkinson LANEC/Dados Barnes/Coords processed/'  # <-- Replace with your desired folder path\n",
     "\n",
-    "# Select input video files (.mp4)\n",
+    "# Select input video files (.mp4, .avi, .mov, .mkv, .webm formats)\n",
     "# Set multiple=False if you want to select only one video\n",
     "video_files = select_file_video(multiple=True)\n",
     "\n",
@@ -105,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "cbb51145-9eac-4d62-8694-4290c2a52c35",
    "metadata": {},
    "outputs": [],
@@ -325,20 +327,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "87d47cde-f35b-4054-bd19-8afc68ffae04",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Press Enter to continue or 'q' to exit:  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Press Enter to continue or 'q' to exit:  \n"
+     ]
+    }
+   ],
    "source": [
     "# Run correction on a specific range of files using Python indexing\n",
     "\n",
+    "video_info = pd.read_csv('/home/rafael/Downloads/Dados Parkinson LANEC/Dados Barnes/Video_info.csv')\n",
     "bp_list = ['head_centre', 'neck', 'body_centre', 'tail_base']\n",
     "seq_thre = 15\n",
     "frame_jump = 10\n",
     "\n",
     "# Example: Define the range of videos to process\n",
-    "id_on = 2   # Start index (inclusive)\n",
-    "id_off = 5  # End index (exclusive)\n",
+    "id_on = 5   # Start index (inclusive)\n",
+    "id_off = 7  # End index (exclusive)\n",
     "\n",
     "# Run correction for selected files only\n",
     "fix_frames_likelihood(\n",
