--- a/DLC_preprocessing.ipynb
+++ b/DLC_preprocessing.ipynb
@@ -363,7 +363,7 @@
    "source": [
     "# Run correction on a specific range of files using Python indexing\n",
     "\n",
-    "video_info = pd.read_csv('/home/rafael/Downloads/Dados Parkinson LANEC/Dados Barnes/Video_info.csv')\n",
+    "# video_info = pd.read_csv('/home/rafael/Downloads/Dados Parkinson LANEC/Dados Barnes/Video_info.csv')\n",
     "bp_list = ['head_centre', 'neck', 'body_centre', 'tail_base']\n",
     "seq_thre = 15\n",
     "frame_jump = 10\n",
